# the-travel-man

./: .gitignore  README.md  hh.py  main.py  pyproject.toml  sys_prompt.py  tools.py  users.db
backend/: auth.py  database.py  graph.py  main.py  sys_prompt.py  tools.py
lyu/: README.md  index.html  metadata.json  package-lock.json  package.json  server.ts
lyu/src/: App.tsx  destinationsData.ts  index.css  types.ts
lyu/src/components/: ChatView.tsx  ExplorationView.tsx  ExploreModal.tsx  FavoritesView.tsx  ItinerariesView.tsx  LoginView.tsx  MobileHeader.tsx  MobileNav.tsx  PlanTripModal.tsx  SettingsView.tsx  Sidebar.tsx
