[project]
name = "practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "langchain>=1.3.12",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.4",
    "langchain-openrouter>=0.2.6",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.9",
    "openrouteservice>=2.3.3",
    "requests>=2.34.2",
    "tavily>=1.1.0",
    "uvicorn>=0.51.0",
]
